--- a/views/pages/public/roomResults.hbs
+++ b/views/pages/public/roomResults.hbs
@@ -105,7 +105,7 @@
         {{/each}}
       {{/if}}
       {{#unless roomResults}}
-        <p>There are no room offers to show.</p>
+        <p>There are no room offers to show. Try adjusting your search criteria for better results.</p>
       {{/unless}}
       
     </div>
