--- a/views/partials/_calendarSearch.hbs
+++ b/views/partials/_calendarSearch.hbs
@@ -51,6 +51,7 @@
 </div>
 
 <!-- Date Input Fields -->
+{{!-- TODO ADD VALIDATION FOR TOTAL NIGHTS MAXIMUM OF 2 WEEKS --}}
 <div class="flatpickr-wrapper">
     <div class="flatpickr-container target-div" id="targetDiv">
         <input type="date" id="flatpickrinstance">
