--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -114,7 +114,7 @@
 {{!-- Book Now button  redirects to room results for guest/public--}}
             {{#unless userType}}
               <li class="nav-item">
-                <a class="nav-link" href="/roomOffers">
+                <a class="nav-link" href="/roomOffers?checkin=today&checkout=tomorrow&guests=1&rooms=1">
                   <button class="book-now">Book Now</button>
                 </a>
               </li>
