--- a/views/partials/_paymentSidebar.hbs
+++ b/views/partials/_paymentSidebar.hbs
@@ -36,6 +36,7 @@
                         </div>
                     </div>
                     <ul {{#equalOrGT bookingData.offers.length 4 }} class="room-amenities-list-restrict"{{/equalOrGT}}>
+                    {{!-- TODO ADD ICON --}}
                         <li>{{bookingData.bedCount}} {{bookingData.bedType}}</li>
                         {{#if bookingData.amenities}}
                             {{#each bookingData.amenities}}
@@ -77,7 +78,7 @@
                 <div>
                     <div class="row">
                         <p class="col pa-left">Total Nights</p>
-                        <p  class="col pa-right">$<span id="totalNightsText">{{bookingData.totalNights}}</span></p>
+                        <p  class="col pa-right"><span id="totalNightsText">{{bookingData.totalNights}}</span></p>
                     </div>
                 </div>
                 {{#notEqual bookingData.extraPersonFee 0}}
@@ -92,27 +93,29 @@
                 {{/notEqual}}
 
                 {{#unless readOnly}}
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
-                            Id like to use my loyalty points
-                        </label>
-                    </div>
-                    <div class="loyalty-container displayNone" id="loyalty-container">
-                        <div class="loyalty-info-points-box">
-                            <p>You have <span>300</span> points to redeem</p>
+                    {{#if loggedIn}}
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Id like to use my loyalty points
+                            </label>
                         </div>
-                        <div class="loyalty-rewards-selection-box">
-                            <p>Select your reward*</p>
-                            <select id="rewards-dropdown-select" class="form-select" aria-label="Default select example" disabled="true">
-                                <option value="10">$10 off</option>
-                                <option value="20">$20 off</option>
-                                <option value="50">$50 off</option>
-                            </select>
-                            <p>*Spend $5, earn 1 point. Get $10 off with every 100 points on your next booking!</p>
-                            <p>** Up to $200 off per booking</p>
+                        <div class="loyalty-container displayNone" id="loyalty-container">
+                            <div class="loyalty-info-points-box">
+                                <p>You have <span>300</span> points to redeem</p>
+                            </div>
+                            <div class="loyalty-rewards-selection-box">
+                                <p>Select your reward*</p>
+                                <select id="rewards-dropdown-select" class="form-select" aria-label="Default select example" disabled="true">
+                                    <option value="10">$10 off</option>
+                                    <option value="20">$20 off</option>
+                                    <option value="50">$50 off</option>
+                                </select>
+                                <p>*Spend $5, earn 1 point. Get $10 off with every 100 points on your next booking!</p>
+                                <p>** Up to $200 off per booking</p>
+                            </div>
                         </div>
-                    </div>
+                    {{/if}}
                 {{/unless}}
             </div>
 
