added the create account checkin redirection

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -122,7 +122,7 @@
             {{#if userType}}
               {{#equal userType "Guest"}}
                 <li class="nav-item">
-                  <a class="nav-link" href="/roomOffers">
+                  <a class="nav-link" href="/roomOffers?checkin=today&checkout=tomorrow&guests=1&rooms=1">
                     <button class="book-now">Book Now</button>
                   </a>
                 </li>
