--- a/public/css/createaccount.css
+++ b/public/css/createaccount.css
@@ -190,6 +190,27 @@ h1.form-header-style{
     margin-bottom: 2em;
 }
 
+.read-only {
+    background-color: #f3f3f3; /* Light gray for read-only fields */
+    opacity: 0.65;
+}
+
+.editable {
+    background-color: #ffffff; /* White for editable fields */
+}
+
+/* Additional styles to override Bootstrap's :focus state */
+input:read-only.read-only {
+    outline: none !important;
+    box-shadow: none !important;
+    background-color: #f3f3f3 !important;
+    border: none !important;
+}
+
+/* For select specifically when disabled */
+select:disabled {
+    opacity: 0.65; /* Makes the disabled state visually distinct */
+}
 
 @media screen and (max-width: 992px) {
 
