--- a/views/partials/formContents/_paymentInfo.hbs
+++ b/views/partials/formContents/_paymentInfo.hbs
@@ -1,27 +1,72 @@
 <h1 class="text-justify mb-4 form-header-style">{{#if headerText}}{{headerText}}{{/if}}{{#unless headerText}}Enter your details{{/unless}}</h1>
-<!-- Placeholder for Payment Fields, ensure they have the 'disabled' attribute by default -->
 {{#unless readOnly}}
-<div>
-    <h6>Card Information</h6>
-    <div>
-        <input type="text" placeholder="Card Number" name="cardNumber" required disabled>
-        <div>
-            <p>textinput</p>
-            <p>textinput</p>
+<!-- Credit Card Information Section -->
+<div class="mb-3" id="card_info_section">
+    <h5 class="mb-3"><strong>Card Information</strong></h5>
+    <div class="mb-3">
+        <label for="cardName" class="form-label">Cardholder Name</label>
+        <input type="text" class="form-control" id="cardName" placeholder="Cardholder Name" name="cardHolderName" required>
+        <div class="invalid-feedback">
+            Please the name of the cardholder
+        </div>
+    </div>
+    <div class="mb-3">
+        <label for="cardNumber" class="form-label">Card Number</label>
+        <input type="text" class="form-control" id="cardNumber" placeholder="Card Number" name="cardNumber" required>
+        <div class="invalid-feedback">
+            Please enter your Card Number
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <label for="cardExpiration" class="form-label">Expiry Date</label>
+            <input type="text" class="form-control" id="cardExpiration" placeholder="MM/YY" maxlength="4" name="expiryDate" required>
+            <div class="invalid-feedback">
+                Please enter your Card's Expiry Date
+            </div>
+        </div>
+        <div class="col">
+            <label for="cardCVC" class="form-label">CVC</label>
+            <input type="password" class="form-control" id="cardCVC" placeholder="CVC" maxlength="4" name="cardCVC" required>
+            <div class="invalid-feedback">
+                Please enter your CVC Code
+            </div>
         </div>
     </div>
 </div>
 {{/unless}}
-<div>
-    <h6>Billing Address</h6>
-    <p>textinput</p>
-    <div>
-        <p>textinput</p>
-        <p>textinput</p>
+<!-- Billing Address Section -->
+<div class="mb-3" id="billing_address_section">
+    <h5 class="mb-3"><strong>Billing Address Information</strong></h5>
+    {{#unless readOnly}}
+    <div class="form-check mb-3">
+        <input class="form-check-input" type="checkbox" id="sameAddress">
+        <label class="form-check-label" for="sameAddress">
+            Same as Current Address
+        </label>
     </div>
-    <p>selectDropDowninput</p>
-    <div>
-        <p>checkInput</p>
-        <p>Same as Guest Address</p>
+    {{/unless}}
+    <div class="mb-3">
+        <label for="billingAddress" class="form-label">Address</label>
+        <input type="text" class="form-control" id="billingAddress" placeholder="Address" name="billingAddress" {{#if guestInfo}}{{#if guestInfo.address}}value="{{guestInfo.address}}"{{/if}}{{/if}} required>
+        <div class="invalid-feedback">
+            Please enter your Address
+        </div>
     </div>
+    <div class="mb-3">
+        <label for="billingCity" class="form-label">City</label>
+        <input type="text" class="form-control" id="billingCity" placeholder="City" name="billingCity" {{#if guestInfo}}{{#if guestInfo.city}}value="{{guestInfo.city}}"{{/if}}{{/if}} required>
+        <div class="invalid-feedback">
+            Please enter your City
+        </div>
+    </div>
+    <div class="mb-3">
+        <label for="billingPostal" class="form-label">Postal Code</label>
+        <input type="text" class="form-control" id="billingPostal" placeholder="Postal Code" name="billingPostal" {{#if guestInfo}}{{#if guestInfo.postalCode}}value="{{guestInfo.postalCode}}"{{/if}}{{/if}} required>
+        <div class="invalid-feedback">
+            Please enter your Postal Code
+        </div>
+    </div>
+    {{> formContents/_countrySelect selectId="inputBillingCountry" selectName="billingcountry" selectTitle="Country" required=true readOnly=readOnly selectedValue=guestInfo.country}}
 </div>
+<!-- Policies Section -->
