added functionality in the db to create a reservation but not yet save it

--- a/views/pages/hotelguest/createReservation.hbs
+++ b/views/pages/hotelguest/createReservation.hbs
@@ -70,7 +70,7 @@
                                     <p>Expiration Date: <span id="reviewexpiryDate"></span></p>
 
                                     <h6>Billing address</h6>
-                                    <p>Same as guest address</p>
+                                    <p id="sameAddresslabellabellabel">Same as guest address</p>
                                     <div>
                                         <p>Address: <span id="reviewbillingAddress"></span></p>
                                         <div>
