--- a/views/partials/formContents/_paymentInfo.hbs
+++ b/views/partials/formContents/_paymentInfo.hbs
@@ -40,7 +40,7 @@
     <h5 class="mb-3"><strong>Billing Address Information</strong></h5>
     {{#unless readOnly}}
     <div class="form-check mb-3">
-        <input class="form-check-input" type="checkbox" id="sameAddress">
+        <input class="form-check-input" type="checkbox" id="sameAddress" name="sameBillingAddress">
         <label class="form-check-label" for="sameAddress">
             Same as Current Address
         </label>
