--- a/views/partials/formContents/_paymentInfo.hbs
+++ b/views/partials/formContents/_paymentInfo.hbs
@@ -48,21 +48,21 @@
     {{/unless}}
     <div class="mb-3">
         <label for="billingAddress" class="form-label">Address</label>
-        <input type="text" class="form-control" id="billingAddress" placeholder="Address" name="billingAddress" {{#if guestInfo}}{{#if guestInfo.address}}value="{{guestInfo.address}}"{{/if}}{{/if}} required>
+        <input type="text" class="form-control {{#if readOnly}}no-border{{/if}}" id="billingAddress" placeholder="Address" name="billingAddress" {{#if guestInfo}}{{#if guestInfo.address}}value="{{guestInfo.address}}"{{/if}}{{/if}} required>
         <div class="invalid-feedback">
             Please enter your Address
         </div>
     </div>
     <div class="mb-3">
         <label for="billingCity" class="form-label">City</label>
-        <input type="text" class="form-control" id="billingCity" placeholder="City" name="billingCity" {{#if guestInfo}}{{#if guestInfo.city}}value="{{guestInfo.city}}"{{/if}}{{/if}} required>
+        <input type="text" class="form-control {{#if readOnly}}no-border{{/if}}" id="billingCity" placeholder="City" name="billingCity" {{#if guestInfo}}{{#if guestInfo.city}}value="{{guestInfo.city}}"{{/if}}{{/if}} required>
         <div class="invalid-feedback">
             Please enter your City
         </div>
     </div>
     <div class="mb-3">
         <label for="billingPostal" class="form-label">Postal Code</label>
-        <input type="text" class="form-control" id="billingPostal" placeholder="Postal Code" name="billingPostal" {{#if guestInfo}}{{#if guestInfo.postalCode}}value="{{guestInfo.postalCode}}"{{/if}}{{/if}} required>
+        <input type="text" class="form-control {{#if readOnly}}no-border{{/if}}" id="billingPostal" placeholder="Postal Code" name="billingPostal" {{#if guestInfo}}{{#if guestInfo.postalCode}}value="{{guestInfo.postalCode}}"{{/if}}{{/if}} required>
         <div class="invalid-feedback">
             Please enter your Postal Code
         </div>
