completed the css for the edit reservations page

--- a/views/pages/hotelguest/reservation.hbs
+++ b/views/pages/hotelguest/reservation.hbs
@@ -8,14 +8,23 @@
                 <div class="subheader-container">
                     <h2>Reservation#{{bookingData.reservationID}}</h2>
                 </div>
+                {{#unless reservationReadOnly}}
                 <div>
                     <button class="btn btn-danger btn-sm" id="cancelReservation" type="button">Cancel</button>
                 </div>
+                {{/unless}}
                 <div class="row justify-content-left">
                     <form id="reservationDateChange" name="reservationDateChange">
                         <div class="card mt-4">
-                            <h6 class="form-content-h6-style mt-4">Booking information</h6> 
-                            <p> Stay Period </p>
+                            <div class="d-flex flex-row justify-content-between">
+                                <div>
+                                    <h6 class="form-content-h6-style mt-4">Booking information</h6> 
+                                    <p> Stay Period </p>
+                                </div>
+                                <div >
+                                    <p class="reservation-status-badge {{status}}">{{status}}</p>
+                                </div>
+                            </div>
                             <div class="d-none" id="calendar-container">
                                 <div class="calendar-wrapper">
                                     <input type="date" readonly id="datePicker">
@@ -37,23 +46,33 @@
                                     </div>
                                 </div>
                             </div>
-                            <button type="button" class="button btn-primary next-button mt-4" id="edit_date">CHANGE DATE</button>
-                            <button type="button" class="button btn-primary next-button mt-4 d-none" id="submit_date">SUBMIT</button>
+                            {{#unless reservationReadOnly}}
+                                <button type="button" class="button btn-primary next-button mt-4" id="edit_date">CHANGE DATE</button>
+                                <button type="button" class="button btn-hocho next-button mt-4 d-none" id="submit_date">SUBMIT</button>
+                                <button type="button" class="button btn-danger next-button mt-4 d-none" id="cancel_date">CANCEL CHANGES</button>
+                            {{/unless}}
                         </div>
                     </form>
 
                     <form id="additionalInfoChange" name="additionalInfoChange">
                         <div class="card mt-4 ">
                             {{> formContents/_additionalInfo readOnly="true" specialRequests=bookingData.specialRequests estimatedArrivalTime=bookingData.estimatedArrivalTime}}
-                            <button type="button" class="button btn-primary next-button mt-4" id="edit_addinfo">EDIT</button>
-                                <button type="button" class="button btn-primary next-button mt-4 d-none" id="submit_addinfo">SUMBIT</button>
+                            {{#unless reservationReadOnly}}
+                                <button type="button" class="button btn-primary next-button mt-4" id="edit_addinfo">EDIT</button>
+                                <button type="button" class="button btn-hocho next-button mt-4 d-none" id="submit_addinfo">SUMBIT</button>
+                                <button type="button" class="button btn-danger next-button mt-4 d-none" id="cancel_addinfo">CANCEL CHANGES</button>
+                            {{/unless}}
                         </div>
                     </form>
 
                     <form id="guestInfoChange" name="guestInfoChange">
                         <div class="card mt-4">
                             {{> formContents/_guestInfo readOnly="true" headerText="Guest Information" guestInfo=guestInfo}}
-                            <button type="button" class="button btn-primary next-button mt-4" id="submit_guestInfo">EDIT</button>
+                            {{#unless reservationReadOnly}}
+                                <button type="button" class="button btn-primary next-button mt-4" id="edit_guestInfo">EDIT</button>
+                                <button type="button" class="button btn-hocho next-button mt-4 d-none" id="submit_guestInfo">SUMBIT</button>
+                                <button type="button" class="button btn-danger next-button mt-4 d-none" id="cancel_guestInfo">CANCEL CHANGES</button>
+                            {{/unless}}
                         </div>
                     </form>
 
