adjusted the room price descripancy between pages

--- a/views/pages/public/roomResults.hbs
+++ b/views/pages/public/roomResults.hbs
@@ -32,7 +32,7 @@
                     {{!-- <p>Room ID {{this.roomID}}</p> --}}
                     {{!-- <p>Offer ID {{this.offerID}}</p> --}}
                     {{!-- TODO add filter for guests --}}
-                    <a href="/roomdetails/{{this.roomID}}/offers/{{this.offerID}}?checkin={{../checkin}}&checkout={{../checkout}}&guests=1&rooms=1">Learn more...</a>
+                    <a href="/roomdetails/{{this.roomID}}/offers/{{this.offerID}}?checkin={{../checkin}}&checkout={{../checkout}}&guests=1&rooms=1&price={{../price}}">Learn more...</a>
                   </div>
 
                   <div class="r-hr-container">
