--- a/views/pages/public/roomdetails.hbs
+++ b/views/pages/public/roomdetails.hbs
@@ -1,66 +1,57 @@
 <div class="container">
+        <div class="mb-5 mt-4">
+        </div>
         <div class="gallery">
-            <figure class="gallery__item gallery__item--1">
-                <a target="_blank" href="room1.jpg">
-                    <img src="/assets/images/room1.jpg" alt="Gallery image 1" class="gallery__img"></a>
-            </figure>
-            <figure class="gallery__item gallery__item--2">
-                <a target="_blank" href="room1.jpg">
-                    <img src="/assets/images/room2.jpg" alt="Gallery image 2" class="gallery__img"></a>
-            </figure>
-            <figure class="gallery__item gallery__item--3">
-                <a target="_blank" href="room1.jpg">
-                    <img src="/assets/images/room3.jpg" alt="Gallery image 3" class="gallery__img"></a>
-            </figure>
-            <figure class="gallery__item gallery__item--4">
-                <a target="_blank" href="room1.jpg">
-                    <img src="/assets/images/room4.jpg" alt="Gallery image 4" class="gallery__img"></a>
-            </figure>
-            <figure class="gallery__item gallery__item--5">
-                <a target="_blank" href="room1.jpg">
-                    <img src="/assets/images/room5.jpg" alt="Gallery image 5" class="gallery__img"></a>
-            </figure>
+            {{#each photos}}
+                <figure class="gallery__item gallery__item--{{this.index}}">
+                    <a target="_blank" href="{{this.url}}">
+                        <img src="{{this.url}}" alt="{{this.alt}}" class="gallery__img"></a>
+                </figure>
+            {{/each }}
         </div>
         <div class="row mt-5">
             <div class="col-md-9">
                 <div class="card mb-3" style="">
                     <div class="container ps-5 pt-4">
-                        <h1>Deluxe Room</h1>
-                        <p><strong>Breakfast Included</strong></p>
+                        <h1>{{roomType}}</h1>
+                        <p><strong>{{offerName}} Included</strong></p>
                         <div class="container text-center">
                             <div class="row">
                                 <div class="col align-self-start">
                                     <div class="room">
-                                        <span class="material-symbols-outlined">
+                                        {{!-- <span class="material-symbols-outlined">
                                             bedroom_child
-                                        </span>
-                                        <p> 1 Bedroom</p>
+                                        </span> --}}
+                                        <img src="/img/icons/amenities/{{amenity1.icon}}" alt="Bed Icon" class="mb-2">
+                                        <p > {{bedCount}} {{bedType}} Bed</p>
                                     </div>
                                 </div>
                                 <div class="col align-self-center">
                                     <div class="room">
-                                        <span class="material-symbols-outlined">
+                                        {{!-- <span class="material-symbols-outlined">
                                             bathtub
-                                        </span>
-                                        <p> 1 Bedroom
-                                        </p>
+                                        </span> --}}
+                                        <img src="/img/icons/amenities/{{amenity2.icon}}" alt="Amenity Icon" class="mb-2">
+                                        <p> {{amenity2.name}}</p>
                                     </div>
                                 </div>
                                 <div class="col align-self-end">
                                     <div class="room">
-                                        <span class="material-symbols-outlined">
+                                        {{!-- <span class="material-symbols-outlined">
                                             soup_kitchen
-                                        </span>
-                                        <p> 1 Bedroom
+                                        </span> --}}
+                                        <img src="/img/icons/amenities/{{amenity3.icon}}" alt="Amenity Icon" class="mb-2">
+                                        <p> {{amenity3.name}}
                                         </p>
                                     </div>
                                 </div>
                                 <div class="col align-self-end">
                                     <div class="room">
-                                        <span class="material-symbols-outlined">
+                                        {{!-- <span class="material-symbols-outlined">
                                             kitchen
-                                        </span>
-                                        <p> 1 Bedroom
+                                        </span> --}}
+                                        <img src="/img/icons/amenities/{{amenity4.icon}}" alt="Amenity Icon" class="mb-2">
+                                        <p> {{amenity4.name}}
                                         </p>
                                     </div>
                                 </div>
@@ -68,62 +59,35 @@
                         </div>
                         <div class="mt-5">
                             <h2>Description</h2>
-                            <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation
-                                ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco
-                                laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p class="text-justify">{{paragraph1}}</p>
+                            <p class="text-justify">{{paragraph2}}</p>
                         </div>
                         <div class="mt-5 amenities">
                             <h2 class="text-warning-emphasis">
                                 Offered Amenities</h2>
                             <ul class="row">
-                                <li class="col-md-6">
-                                    <span class="material-symbols-outlined">
-                                        kitchen
-                                    </span>
-                                    Mini Fridge
-                                </li>
-                                <li class="col-md-6">
-                                    <span class="material-symbols-outlined">
-                                        ac_unit
-                                    </span>Air Conditioner
-                                </li>
-                                <li class="col-md-6">
-                                    <span class="material-symbols-outlined">
-                                        local_laundry_service
-                                    </span>Washer
-                                </li>
-                                <li class="col-md-6"><span class="material-symbols-outlined">
-                                        tv
-                                    </span>Television</li>
-                                <li class="col-md-6">
-                                    <span class="material-symbols-outlined">
-                                        wifi
-                                    </span>
-                                    Free wireless Internet
-                                </li>
-                                <li class="col-md-6">
-                                    <span class="material-symbols-outlined">
-                                        deck
-                                    </span>Balcony or Patio
-                                </li>
-
+                                {{#each roomFeatures}}
+                                    <li class="col-md-6">
+                                        <img src="/img/icons/amenities/{{this.icon}}" alt="Amenity Icon" >
+                                        <div style="width:0.6em"></div>
+                                        {{this.name}}
+                                    </li>
+                                {{/each}}
                             </ul>
 
                         </div>
                         <div class="mt-5 amenities">
                             <h2>Safety and Hygiene</h2>
                             <ul class="row">
-                                <li class="col-md-6"><span class="material-symbols-outlined">
-                                        cleaning_services
-                                    </span>Daily Cleaning</li>
-                                <li class="col-md-6"><span class="material-symbols-outlined">
+                                {{#each safetyandHygeine}}
+                                    <li class="col-md-6">
+                                        <img src="/img/icons/amenities/{{this.icon}}" alt="Amenity Icon">
+                                        <div style="width:0.6em"></div>
+                                        {{this.name}}
+                                    </li>
+                                {{/each}}
+
+                                {{!-- <li class="col-md-6"><span class="material-symbols-outlined">
                                         fire_extinguisher
                                     </span>Fire Protection</li>
                                 <li class="col-md-6"><span class="material-symbols-outlined">
@@ -131,7 +95,7 @@
                                     </span>Smoke Detectors</li>
                                 <li class="col-md-6"><span class="material-symbols-outlined">
                                         sanitizer
-                                    </span>Disinfections and Sterilizations</li>
+                                    </span>Disinfections and Sterilizations</li> --}}
                             </ul>
                         </div>
 
@@ -143,17 +107,21 @@
 
             <div class="col-md-3">
                 <div class="card1">
-                    <h5 class="card-title pt-5"><b>$ 250 / night</b></h5>
+                    <h5 class="card-title pt-5"><b>$ {{price}} / night</b></h5>
                     <hr>
-                    <p class="card-text">Breakfast Included</p>
+
+                    {{#each offersSidePanel}}
+                        <p class="card-text">{{this.name}}</p>
+                    {{/each}}
+                    {{!-- 
                     <p class="card-text">Sq metres: 30</p>
                     <p class="card-text">In Room Dining </p>
                     <p class="card-text">Balcony Access </p>
                     <p class="card-text">Wifi Connectivity </p>
                     <p class="card-text">Laundry Services </p>
-                    <p class="card-text">Concierge Services </p>
-                    <a href="/createaccount"><button>Reserve Now</button></a>
-                    
+                    <p class="card-text">Concierge Services </p> --}}
+
+                    <a href="/checkout?roomdetails={{roomdetails}}&offers={{offerdetails}}&checkin={{checkin}}6&checkout={{checkout}}7&guests=1&rooms=1"><button>Reserve Now</button></a>
                 </div>
             </div>
         </div>
@@ -163,3 +131,6 @@
     </div>
 
     </div>
+
+<div class="mb-5 mt-4">
+</div>
